@@ -4,34 +4,34 @@ import java.util.HashMap;
 
 /**
  * A Hash that creates new elements if they don't exists
- * @author pcingola
  *
  * @param <K>
  * @param <V>
+ * @author pcingola
  */
 public class AutoHashMap<K, V> extends HashMap<K, V> {
 
-	private static final long serialVersionUID = 255818677257868365L;
+    private static final long serialVersionUID = 255818677257868365L;
 
-	V instance;
+    V instance;
 
-	public AutoHashMap(V instance) {
-		super();
-		this.instance = instance;
-	}
+    public AutoHashMap(V instance) {
+        super();
+        this.instance = instance;
+    }
 
-	@SuppressWarnings("unchecked")
-	public V getOrCreate(K key) {
-		V v = get(key);
-		if (v == null) {
-			try {
-				v = (V) instance.getClass().newInstance();
-			} catch (Exception e) {
-				throw new RuntimeException(e);
-			}
-			put(key, v);
-		}
-		return v;
-	}
+    @SuppressWarnings("unchecked")
+    public V getOrCreate(K key) {
+        V v = get(key);
+        if (v == null) {
+            try {
+                v = (V) instance.getClass().getConstructor().newInstance();
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+            put(key, v);
+        }
+        return v;
+    }
 
 }
